--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,133 @@
-requests ==2.25.1
+altair==4.1.0
+aniso8601==9.0.1
+anyio==3.3.4
+appdirs==1.4.4
+argon2-cffi==20.1.0
+asgiref==3.4.1
+astor==0.8.1
+async-generator==1.10
+attrs==21.2.0
+backcall==0.2.0
+base58==2.1.0
+beautifulsoup4==4.9.3
+bleach==3.3.1
+blinker==1.4
 bs4==0.0.1
-fastapi == 0.70.0
-gunicorn == 20.1.0
-streamlit==0.84.1
-pandas==1.3.0
+cachetools==4.2.2
+certifi==2021.5.30
+cffi==1.14.6
+chardet==4.0.0
+click==7.1.2
+colorama==0.4.4
+cssselect==1.1.0
+cycler==0.10.0
+debugpy==1.3.0
+decorator==5.0.9
+defusedxml==0.7.1
+docutils==0.17.1
+entrypoints==0.3
+fake-useragent==0.1.11
+fastapi==0.70.0
+Flask==2.0.1
+Flask-RESTful==0.3.9
+gitdb==4.0.7
+GitPython==3.1.18
+gunicorn==20.1.0
+h11==0.12.0
+idna==2.10
+importlib-metadata==4.8.1
+ipykernel==6.0.2
+ipython==7.25.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+itsdangerous==2.0.1
+jedi==0.18.0
+Jinja2==3.0.1
+joblib==1.0.1
+jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+Kivy==2.0.0
+kivy-deps.angle==0.3.0
+kivy-deps.glew==0.3.0
+kivy-deps.sdl2==0.3.1
+Kivy-Garden==0.1.4
+kiwisolver==1.3.1
+lxml==4.6.3
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+matplotlib-inline==0.1.2
+mistune==0.8.4
+nbclient==0.5.3
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.0
 numpy==1.21.0
+packaging==21.0
+pandas==1.3.0
+pandocfilters==1.4.3
+parse==1.19.0
+parso==0.8.2
+pickleshare==0.7.5
+Pillow==8.3.0
+prometheus-client==0.11.0
+prompt-toolkit==3.0.19
+protobuf==3.17.3
+pyarrow==4.0.1
+pycparser==2.20
+pydantic==1.8.2
+pydeck==0.6.2
+pydotplus==2.0.2
+pyee==8.2.2
+Pygments==2.9.0
+pyparsing==2.4.7
+pypiwin32==223
+pyppeteer==0.2.6
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+pyquery==1.4.3
+pyrsistent==0.18.0
+python-dateutil==2.8.1
+pytz==2021.1
+pywin32==301
+pywinpty==1.1.3
+pyzmq==22.1.0
+requests==2.25.1
+requests-html==0.10.0
 scikit-learn==0.24.2
-requests ==2.25.1
-
-
+scipy==1.7.0
+seaborn==0.11.1
+Send2Trash==1.7.1
+six==1.16.0
+sklearn==0.0
+smmap==4.0.0
+sniffio==1.2.0
+soupsieve==2.2.1
+sportsipy==0.6.0
+starlette==0.16.0
+streamlit==0.84.1
+terminado==0.10.1
+testpath==0.5.0
+threadpoolctl==2.1.0
+toml==0.10.2
+toolz==0.11.1
+tornado==6.1
+tqdm==4.62.2
+traitlets==5.0.5
+typing-extensions==3.10.0.2
+tzlocal==2.1
+urllib3==1.26.6
+uvicorn==0.15.0
+validators==0.18.2
+w3lib==1.22.0
+watchdog==2.1.3
+wcwidth==0.2.5
+webencodings==0.5.1
+websockets==9.1
+Werkzeug==2.0.1
+widgetsnbextension==3.5.1
+zipp==3.5.0
