--- a/requirements.txt
+++ b/requirements.txt
@@ -129,5 +129,17 @@ wcwidth==0.2.5
 webencodings==0.5.1
 websockets==9.1
 Werkzeug==2.0.1
+requests ==2.25.1
+bs4==0.0.1
+fastapi == 0.70.0
+gunicorn == 20.1.0
+streamlit==0.84.1
+pandas==1.3.0
+numpy==1.21.0
+scikit-learn==0.24.2
+requests ==2.25.1
+
+
+
 widgetsnbextension==3.5.1
 zipp==3.5.0
